tests/miniJava/pos/000671_cdrc2.MiniJava
class java { public static void Main ( String [ ] java ) { if ( java ) java = 0 ; else if ( 0 ) { } else { } } }
