tests/miniJava/neg/000611_mutation.MiniJava
class java { public static void Main ( String [ ] java ) { java = class java ; } }
